--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?jr7kau');
-  src:  url('../fonts/icomoon.eot?jr7kau#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?jr7kau') format('truetype'),
-    url('../fonts/icomoon.woff?jr7kau') format('woff'),
-    url('../fonts/icomoon.svg?jr7kau#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?4ptr56');
+  src:  url('../fonts/icomoon.eot?4ptr56#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?4ptr56') format('truetype'),
+    url('../fonts/icomoon.woff?4ptr56') format('woff'),
+    url('../fonts/icomoon.svg?4ptr56#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -30,8 +30,20 @@
 .icon-location2:before {
   content: "\e948";
 }
+.icon-user-tie:before {
+  content: "\e976";
+}
 .icon-menu:before {
   content: "\e9bd";
+}
+.icon-star-empty:before {
+  content: "\e9d7";
+}
+.icon-star-half:before {
+  content: "\e9d8";
+}
+.icon-star-full:before {
+  content: "\e9d9";
 }
 .icon-arrow-down:before {
   content: "\ea36";
@@ -48,6 +60,19 @@
 .icon-twitter:before {
   content: "\ea96";
 }
+.icon-joomla:before {
+  content: "\eab5";
+}
+.icon-reddit:before {
+  content: "\eac6";
+}
 .icon-linkedin2:before {
   content: "\eaca";
 }
+.icon-yelp:before {
+  content: "\ead7";
+}
+.icon-svg:before {
+  content: "\eae9";
+}
+
