--- a/css/app.css
+++ b/css/app.css
@@ -100,8 +100,10 @@ body h1, h2, h3, h4, h5, h6{
   font-weight: 100;
   opacity: 0.7;
 }
-.main-content .sub-section .profile-table{
+.main-content .sub-section.profile-section .profile-table{
   border-top: 1px solid #e1e1e1;
+}
+.main-content .sub-section .profile-table{
   padding-top: 40px;
 }
 .main-content .left{
@@ -160,19 +162,23 @@ body h1, h2, h3, h4, h5, h6{
   line-height: 32px;
 }
 .right .row .normal-txt a{
+  color: #434242;
   text-decoration: none;
   line-height: 22px;
   position: relative;
-  margin-top: 4px;
+}
+.right .row .normal-txt a.location-link{
   padding-left: 22px;
-  color: #235e8e;
+  margin-top: 4px;
+  font-style: oblique;
 }
 .right .row .normal-txt a:hover{
   color: #08c;
 }
-.right .row .normal-txt a span.icon-location2{
+.right .row .normal-txt a.location-link span.icon-location2{
   font-size: 1.25em;
   position: absolute;
+  color: #0088cc;
   left: 0px;
   top: 0px;
 }
@@ -296,14 +302,9 @@ body h1, h2, h3, h4, h5, h6{
   position: absolute;
   z-index: 32;
   color: #ffffff;
+  background-color: rgba(0, 0, 0, 0.5);
   display: none;
-}
-.header-content .menu-content .menu-sub{
-  width: 100%;
-  height: 100%;
-  background-color: #000;
-  opacity: 0.5;
-  z-index: 32;
+
 }
 .header-content .menu-content ul{
   list-style: none;
@@ -359,3 +360,121 @@ body h1, h2, h3, h4, h5, h6{
 .right_cover{
   opacity: 0.5;
 }
+#profile.profile{
+  margin-bottom: 108px;
+}
+.sub-section.portfolio{
+  background-color: #e5e5e5;
+  position: relative;
+  padding-top: 32px;
+}
+.main-content .sub-section.portfolio h2{
+  margin-top: 50px;
+}
+.main-content .sub-section.portfolio .profile-table{
+  font-size: 1.375em;
+  padding-top: 0px;
+}
+#portfolio::before{
+  content: '';
+  background: #fff;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  width: 50px;
+  height: 50px;
+  display: block;
+  position: absolute;
+  margin-left: -25px;
+  top: -25px;
+  left: 50%;
+}
+.portfolio section.regular.slider{
+  width: 100%;
+  margin: 40px auto;
+}
+.portfolio .slick-prev::before{
+  content: "\e905";
+}
+.portfolio .slick-next{
+  right: -32px;
+}
+.portfolio .slick-prev{
+  left: -32px;
+}
+.portfolio .slick-next, .portfolio .slick-prev{
+  top: calc(50% - 40px);
+  width: 40px;
+  height: 40px;
+}
+.portfolio .slick-next::before{
+  content: "\e903";
+}
+.portfolio .slick-prev:before, .portfolio .slick-prev::before, .portfolio .slick-next:before, .portfolio .slick-next::before{
+  font-family: 'icomoon' !important;
+  color: #0088cc;
+}
+.portfolio .slider{
+  width: 100%;
+  margin: auto;
+  float: left;
+  margin-bottom: 92px;
+}
+.portfolio .slick-slide.slick-active{
+  opacity: 1;
+}
+.portfolio .slick-slide > div{
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  border-radius: 2px;
+  opacity: 1;
+  background-color: #fff;
+  height: 100%;
+  margin: 0px 16px;
+}
+.portfolio .slider .sub-slider{
+  float: left;
+  width: 32.2%;
+  margin-right: 1.7%;
+  padding: 22px 20px;
+  background-color: #fff;
+  border-radius: 2px;
+  height: 418px;
+  margin-bottom: 20px;
+  overflow: hidden;
+}
+.main-content .sub-section #portfolio.profile{
+  max-width: 1024px;
+}
+.portfolio .slider :nth-child(3n+3){
+  margin-right: 0px;
+}
+.portfolio .slider .sub-slider p{
+  font-size: 0.725em;
+  font-weight: 300;
+  line-height: 25px;
+  max-height: 220px;
+  overflow: hidden;
+}
+.portfolio .slider .sub-slider > span{
+  font-size: 28px;
+  width: 52px;
+  height: 52px;
+  background-color: #0088cc;
+  color: #fff;
+  display: inline-block;
+  text-align: center;
+  line-height: 52px;
+  border-radius: 50%;
+}
+.portfolio .slider .sub-slider > h1{
+  font-size: 1.625em;
+  color: #2f2f35;
+  display: block;
+  line-height: 26px;
+  margin: 26px 0 22px;
+}
+
+
