--- a/css/app.css
+++ b/css/app.css
@@ -497,7 +497,7 @@ body h1, h2, h3, h4, h5, h6{
   line-height: 26px;
   margin: 26px 0 22px;
 }
-.portfolio .exp-tech-hover {
+.portfolio .tech-hover {
   position: absolute;
   left: 0;
   top: 0;
@@ -509,7 +509,7 @@ body h1, h2, h3, h4, h5, h6{
   -webkit-transition: all .5s ease 0s;
   overflow: hidden;
 }
-.portfolio .exp-tech-hover > img {
+.portfolio .tech-hover > img {
   width: 100%;
   max-width: 100%;
   vertical-align: top;
@@ -518,7 +518,7 @@ body h1, h2, h3, h4, h5, h6{
   -webkit-animation-name: fadeInUp;
   animation-name: fadeInUp;
 }
-.exp-inner-main {
+.inner-main {
   background: rgba(34,34,34,.8);
   height: 100%;
   left: 0;
@@ -527,42 +527,57 @@ body h1, h2, h3, h4, h5, h6{
   top: 0;
   width: 100%;
 }
-.exp-inner-brd {
+.inner-brd {
   border: 1px solid #fff;
   height: calc(100% - 140px);
   left: 0;
   margin: 19px;
   position: absolute;
   top: 0;
-  width: calc(100% - 140px);
-  padding: 30px;
+  width: calc(100% - 126px);
+  padding: 30px 22px 30px 26px;
 }
-.exp-inner-main h4 {
+.inner-main h4 {
   line-height: 26px;
-  font-size: 26px;
+  font-size: 22px;
   color: #0088cc;
-  margin-bottom: 27px;
+  margin-bottom: 28px;
+  margin-top: 16px;
 }
-.exp-inner-main h4, .exp-listing article h3 {
+.inner-main h6 {
+  font-size: 18px;
+  font-weight: 400;
+  color: #fff;
+  margin-bottom: 10px;
+  margin-top: 22px;
+}
+
+.inner-main h4, .listing article h3 {
   text-transform: uppercase;
 }
-.exp-inner-main ul {
+.inner-main ul {
   margin: 0;
   padding: 0;
+  font-size: 15px;
+  font-weight: 300;
 }
-.exp-inner-main ul li {
+.inner-main ul li {
   margin: 0 0 8px;
-  padding: 0 0 0 20px;
-  list-style: none;
-  display: block;
+  padding: 0;
   position: relative;
   color: #fff;
+  list-style-position: inside;
 }
-.exp-inner-main ul li a {
+.inner-main .inner-brd > a{
   color: #fff;
   text-decoration: none;
 }
-.exp-inner-main ul li:after {
+.inner-main .inner-brd > span{
+  color: #fff;
+  margin-top: 30px;
+  display: inline-flex;
+}
+.inner-main ul li:after {
   position: absolute;
   left: 0;
   top: 8px;
@@ -572,7 +587,7 @@ body h1, h2, h3, h4, h5, h6{
   height: 5px;
   border-radius: 100%;
 }
-.portfolio .exp-tech-hover:hover, .portfolio .exp-tech-hover:hover:before {
+.portfolio .tech-hover:hover, .portfolio .tech-hover:hover:before {
   opacity: 1;
   transition: all .5s ease 0s;
   -webkit-transition: all .5s ease 0s;
