--- a/css/app.css
+++ b/css/app.css
@@ -424,6 +424,22 @@ body h1, h2, h3, h4, h5, h6{
   top: -25px;
   left: 50%;
 }
+#blog::before{
+  content: '';
+  background: #f2f2f2;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  width: 50px;
+  height: 50px;
+  display: block;
+  position: absolute;
+  margin-left: -25px;
+  top: -25px;
+  left: 50%;
+}
 .portfolio section.regular.slider{
   width: 100%;
   margin: 40px auto;
@@ -641,11 +657,13 @@ body h1, h2, h3, h4, h5, h6{
   }
 }
 .main-content .sub-section.skills{
-  background-color: #f3f2f1;
+  background-color: #f2f2f2;
   padding-top: 32px;
   position: relative;
 }
-.main-content .sub-section.skills h2{
+.main-content .sub-section.skills h2,
+.main-content .sub-section.blog h2,
+.main-content .sub-section.contact h2{
   margin-top: 50px;
   margin-bottom: 0px;
 }
@@ -715,4 +733,99 @@ hr {
 }
 .sub-skills .section-row ul li:hover span.skill-star > span{
   font-size: 20px;
+}
+.main-content .sub-section.blog{
+  background-color: #ffffff;
+  padding-top: 32px;
+  position: relative;
+}
+.main-content .sub-section.contact{
+  padding-top: 12px;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.95);
+}
+footer{
+  text-align: center;
+  font-size: 13px;
+  background-color: rgba(0, 0, 0, 0.95);
+  color: #fff;
+  font-weight: 100;
+  padding-bottom: 18px;
+  font-weight: 300;
+}
+.contact .profile a{
+  text-decoration: none;
+}
+.contact .profile .contact-form, .contact .profile .social-content{
+  width: calc(50% - 60px);
+  float: left;
+}
+.contact-form input, .contact-form textarea{
+  width: calc(50% - 36px);
+  border: 1px solid #fff;
+  color: #fff;
+  height: 32px;
+  padding-left: 12px;
+  padding-right: 10px;
+  background-color: transparent;
+  outline: none;
+  font-weight: 100;
+  font-size: 14px;
+  margin-left: 6px;
+}
+.contact-form input:hover{
+  outline: none;
+}
+.contact-form textarea.social-msg::-webkit-input-placeholder, .contact-form input::-webkit-input-placeholder{
+  -webkit-text-security: none;
+  color: #f2f2f2;
+  pointer-events: none !important;
+}
+.contact-form textarea.social-msg{
+  width: calc(100% - 39px);
+  height: 80px;
+  margin-top: 10px;
+  padding-top: 10px;
+  color: #fff;
+}
+
+.contact-form-btn{
+  height: 40px;
+  color: #fff;
+  border: 2px solid #0088cc;
+  background-color: transparent;
+  line-height: 40px;
+  width: 150px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 2px;
+  margin-left: 6px;
+  margin-top: 18px;
+  font-weight: 300;
+}
+.contact-form-btn:hover{
+  background-color: #0088cc;
+}
+.social-row a > span{
+  margin-top: 5px;
+  float: left;
+  margin-left: 6px;
+}
+.social-row a{
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background-color: #d3d3d3;
+  display: inline-block;
+  line-height: 32px;
+  text-align: center;
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.6);
+}
+.social-menu ul{
+  list-style: none;
+}
+.social-menu ul li{
+  display: inline-block;
+  
 }
