--- a/css/app.css
+++ b/css/app.css
@@ -742,36 +742,46 @@ hr {
 .main-content .sub-section.contact{
   padding-top: 12px;
   position: relative;
-  background-color: rgba(0, 0, 0, 0.95);
+  color: #e0e0e0;
+  background-color: #656565;
 }
 footer{
   text-align: center;
   font-size: 13px;
-  background-color: rgba(0, 0, 0, 0.95);
-  color: #fff;
+  color: #e0e0e0;
+  background-color: rgba(41, 41, 41, 0.8);
   font-weight: 100;
   padding-bottom: 18px;
   font-weight: 300;
+  padding-top: 20px;
 }
 .contact .profile a{
   text-decoration: none;
 }
-.contact .profile .contact-form, .contact .profile .social-content{
-  width: calc(50% - 60px);
+.contact .profile .contact-form{
+  width: calc(65% - 60px);
   float: left;
+} 
+.contact .profile .social-content{
+  width: calc(35% - 60px);
+  float: left;
+  padding-left: 60px;
+  padding-top: 60px;
+}
+.contact-form input.email{
+  margin-left: 10px;
 }
 .contact-form input, .contact-form textarea{
   width: calc(50% - 36px);
   border: 1px solid #fff;
   color: #fff;
-  height: 32px;
+  height: 42px;
   padding-left: 12px;
   padding-right: 10px;
   background-color: transparent;
   outline: none;
   font-weight: 100;
   font-size: 14px;
-  margin-left: 6px;
 }
 .contact-form input:hover{
   outline: none;
@@ -782,8 +792,8 @@ footer{
   pointer-events: none !important;
 }
 .contact-form textarea.social-msg{
-  width: calc(100% - 39px);
-  height: 80px;
+  width: calc(100% - 35px);
+  height: 108px;
   margin-top: 10px;
   padding-top: 10px;
   color: #fff;
@@ -792,40 +802,73 @@ footer{
 .contact-form-btn{
   height: 40px;
   color: #fff;
-  border: 2px solid #0088cc;
+  border: 1px solid #ffffff;
   background-color: transparent;
   line-height: 40px;
   width: 150px;
   display: inline-block;
   text-align: center;
   border-radius: 2px;
-  margin-left: 6px;
   margin-top: 18px;
   font-weight: 300;
 }
 .contact-form-btn:hover{
   background-color: #0088cc;
-}
-.social-row a > span{
-  margin-top: 5px;
-  float: left;
-  margin-left: 6px;
+  border: 1px solid #0088cc;
 }
 .social-row a{
-  width: 32px;
-  height: 32px;
+  width: 28px;
+  height: 28px;
   border-radius: 50%;
-  background-color: #d3d3d3;
+  background-color: #ffffff;
   display: inline-block;
   line-height: 32px;
   text-align: center;
-  font-size: 20px;
+  font-size: 16px;
   color: rgba(0, 0, 0, 0.6);
+  text-decoration: none;
+  margin-left: 6px;
+}
+.social-row a:hover{
+  background-color: #0088cc;
+  color: #ffffff;
 }
 .social-menu ul{
   list-style: none;
+  -webkit-padding-start: 0px;
 }
 .social-menu ul li{
   display: inline-block;
-  
+  height: 48px;
+  font-size: 18px;
+  font-weight: 300;
+  text-transform: uppercase;
+  position: relative;
+  padding-left: 42px;
+  line-height: 32px;
+}
+.social-menu ul li span{
+  font-size: 22px;
+  position: absolute;
+  left: 0px;
+  top: 2px;
+}
+.main-content .sub-section.contact .profile{
+  padding-bottom: 80px;
+}
+.main-content .sub-section.contact .profile h2{
+  color: #fff;
+  margin-top: 38px;
+  text-align: left;
+}
+.contact-form{
+  margin-top: 28px;
+}
+.footer-content{
+  max-width: 1024px;
+  margin: 0 auto;
+  position: relative;
+}
+.footer-content .social-row{
+  padding-bottom: 4px;
 }
