--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?3gewwm');
-  src:  url('../fonts/icomoon.eot?3gewwm#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?3gewwm') format('truetype'),
-    url('../fonts/icomoon.woff?3gewwm') format('woff'),
-    url('../fonts/icomoon.svg?3gewwm#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?bex8cn');
+  src:  url('../fonts/icomoon.eot?bex8cn#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?bex8cn') format('truetype'),
+    url('../fonts/icomoon.woff?bex8cn') format('woff'),
+    url('../fonts/icomoon.svg?bex8cn#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -45,50 +45,74 @@
 .icon-newspaper:before {
   content: "\e904";
 }
-.icon-camera:before {
+.icon-pencil:before {
+  content: "\e907";
+}
+.icon-pencil2:before {
+  content: "\e908";
+}
+.icon-quill:before {
+  content: "\e909";
+}
+.icon-pen:before {
+  content: "\e90a";
+}
+.icon-blog:before {
+  content: "\e90b";
+}
+.icon-eyedropper:before {
+  content: "\e90c";
+}
+.icon-droplet:before {
+  content: "\e90d";
+}
+.icon-paint-format:before {
+  content: "\e90e";
+}
+.icon-image:before {
   content: "\e90f";
 }
-.icon-dice:before {
-  content: "\e915";
+.icon-pacman:before {
+  content: "\e916";
 }
-.icon-book:before {
-  content: "\e91f";
+.icon-spades:before {
+  content: "\e917";
 }
-.icon-books:before {
-  content: "\e920";
+.icon-diamonds:before {
+  content: "\e919";
+}
+.icon-bullhorn:before {
+  content: "\e91a";
+}
+.icon-connection:before {
+  content: "\e91b";
 }
 .icon-library:before {
   content: "\e921";
 }
-.icon-folder-open:before {
-  content: "\e930";
-}
-.icon-cart:before {
-  content: "\e93a";
-}
-.icon-lifebuoy:before {
-  content: "\e941";
+.icon-phone:before {
+  content: "\e942";
 }
 .icon-envelop:before {
   content: "\e945";
 }
-.icon-location2:before {
-  content: "\e948";
+.icon-history:before {
+  content: "\e94d";
 }
-.icon-compass:before {
-  content: "\e949";
+.icon-clock:before {
+  content: "\e94e";
 }
-.icon-compass2:before {
-  content: "\e94a";
+.icon-clock2:before {
+  content: "\e94f";
 }
-.icon-map:before {
-  content: "\e94b";
+.icon-alarm:before {
+  content: "\e950";
 }
-.icon-map2:before {
-  content: "\e94c";
+.icon-stopwatch:before {
+  content: "\e952";
 }
-.icon-bell:before {
-  content: "\e951";
+.icon-calendar:before {
+  content: "\e953";
 }
 .icon-display:before {
   content: "\e956";
@@ -252,8 +276,14 @@
 .icon-arrow-down:before {
   content: "\ea36";
 }
+.icon-arrow-right2:before {
+  content: "\ea3c";
+}
 .icon-arrow-down-right2:before {
   content: "\ea3d";
+}
+.icon-circle-right:before {
+  content: "\ea42";
 }
 .icon-sort-amount-asc:before {
   content: "\ea4c";
@@ -404,4 +434,7 @@
 }
 .icon-IcoMoon:before {
   content: "\eaea";
+}
+.icon-clubs:before {
+  content: "\e918";
 }
