--- a/css/app.css
+++ b/css/app.css
@@ -886,10 +886,13 @@ footer{
   float: left;
   overflow: hidden;
   width: 100%;
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
 }
 .blog .profile-sub-table .blog-card .img-container img{
   height: 100%;
   width: 100%;
+  float: left;
 }
 .blog .profile-sub-table .blog-card .txt-container{
   box-sizing: border-box;
@@ -897,11 +900,21 @@ footer{
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
   border-bottom-left-radius: 2px;
   border-bottom-right-radius: 2px;
-  padding: 12px 16px;
+  padding: 18px 16px 12px 18px;
+  float: left;
+  height: 130px;
 }
 .blog .profile-sub-table .blog-card .txt-container h6{
   margin-top: 0px;
   margin-bottom: 0px;
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.blog .profile-sub-table .blog-card .txt-container p{
+  font-size: 13px;
+  font-weight: 100;
+  line-height: 18px;
 }
 
 .main-content .sub-section.blog .profile h2{
